# ant-sim2

./: .gitignore  Cargo.toml  README.md
crates/headless/: Cargo.toml
crates/headless/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: clock.rs  lib.rs  main.rs  protocol.rs  sim_thread.rs  ws.rs
crates/server/tests/: fixtures.rs  ws.rs
crates/server/tests/fixtures/: expected.json
crates/sim/: Cargo.toml
crates/sim/src/: ants.rs  apply.rs  brain.rs  chronicle.rs  colony.rs  config.rs  genome.rs  grid.rs  intent.rs  lib.rs  names.rs  pheromone.rs  reproduce.rs  rng.rs  sense.rs  snapshot.rs  spatial.rs  stats.rs  world.rs  worldgen.rs
crates/sim/tests/: behavior.rs  determinism.rs  golden.rs  gradient.rs  known_good.rs  snapshot.rs
docs/superpowers/notes/: 2026-07-09-first-500k-tick-run.md  2026-07-13-economy-tuning-result.md  2026-07-13-followup-economy-tuning.md  2026-07-13-shaped-fitness-growth-result.md
docs/superpowers/plans/: 2026-07-09-antsim-server-web.md  2026-07-09-antsim-sim-core.md  2026-07-13-ant-sprites.md  2026-07-13-antsim-shaped-fitness.md  2026-07-13-antsim-story-and-map.md  2026-07-13-living-world-refounding-and-trails.md  2026-07-13-ui-explorer-and-legibility.md  2026-07-14-food-relocation-and-keepout.md  2026-07-14-recent-productivity-fitness.md  2026-07-15-nn-fullscreen-and-explain-everything.md
docs/superpowers/specs/: 2026-07-09-antsim-design.md  2026-07-13-ant-sprites-design.md  2026-07-13-antsim-growth-and-story.md  2026-07-13-living-world-refounding-and-trails-design.md  2026-07-13-ui-explorer-and-legibility-design.md  2026-07-14-food-relocation-and-keepout-design.md  2026-07-14-recent-productivity-fitness-design.md  2026-07-15-home-vector-and-exploration-trail-design.md  2026-07-15-nn-fullscreen-and-explain-everything-design.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: colors.ts  fitness.ts  main.ts  net.ts  nnlabels.ts  protocol.ts  state.ts  symbols.ts  terrain.ts  tile.ts
web/src/render/: camera.ts  shaders.ts  sprites.ts  world.ts
web/src/ui/: antpopover.ts  chronicle.ts  colony.ts  colonypanel.ts  contextmenu.ts  controls.ts  explain.ts  explorer.ts  graphmodal.ts  inspector.ts  labels.ts  nnmodal.ts  nnview.ts  rail.ts  stats.ts  tooltips.ts  tunables.ts
web/tests/: camera.test.ts  explain.test.ts  fitness.test.ts  labels.test.ts  nnlabels.test.ts  nnmodal.test.ts  nnview.test.ts  protocol.test.ts  sprites.test.ts  state.test.ts  symbols.test.ts  terrain.test.ts  tile.test.ts  tooltips.test.ts  tunables.test.ts
