[workspace]
resolver = "2"
members = ["crates/sim", "crates/headless"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
# Pinned to 1.3: bincode 2.x changed its encoding, which would silently
# invalidate the checked-in golden-master fixture.
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
