[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sim = { path = "../sim" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
