[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sim = { path = "../sim" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util.workspace = true
clap.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
